Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-1071

Tabbing away from an editable QComboBox does not emit activated() or currentIndexChanged()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 4.3.1, 5.0.0
    • Widgets: Itemviews
    • None
    • 8abe466caa1b38f4cc1f95fba83d5e61e611e931

    Description

      Tabbing away from an editable QComboBox does not emit neither the activated() nor the currentIindexChanged() signal, though visibly the text in the combobox has changed. These signals seem only to be emitted when pressing 'Enter'.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes