Make the combobox emit activated when it loses focus

Task-number: QTBUG-1071
Reviewed-by: ogoffart